--- a/BelugaXtender.safariextension/Info.plist
+++ b/BelugaXtender.safariextension/Info.plist
@@ -66,6 +66,6 @@
 		</dict>
 	</dict>
 	<key>Website</key>
-	<string>http://tmiz.net</string>
+	<string>http://tg.tmiz.net</string>
 </dict>
 </plist>
