--- a/BelugaXtender.safariextension/Info.plist
+++ b/BelugaXtender.safariextension/Info.plist
@@ -11,9 +11,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.1</string>
+	<string>0.1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
@@ -22,17 +22,17 @@
 		<array>
 			<dict>
 				<key>Command</key>
-				<string>show-messages</string>
+				<string>activate-beluga</string>
 				<key>Identifier</key>
 				<string>messages</string>
 				<key>Image</key>
 				<string>beluga.png</string>
 				<key>Label</key>
-				<string>Messages</string>
+				<string>Beluga</string>
 				<key>Palette Label</key>
 				<string>Messages</string>
 				<key>Tool Tip</key>
-				<string>Show messages.</string>
+				<string>Activate Beluga</string>
 			</dict>
 		</array>
 	</dict>
