--- a/BelugaXtender.safariextension/Info.plist
+++ b/BelugaXtender.safariextension/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>Author</key>
 	<string>tmiz.net</string>
+	<key>Builder Version</key>
+	<string>6534.42</string>
 	<key>CFBundleDisplayName</key>
 	<string>BelugaXtender</string>
 	<key>CFBundleIdentifier</key>
@@ -11,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.2.1</string>
+	<string>0.2.2</string>
 	<key>CFBundleVersion</key>
-	<string>5</string>
+	<string>6</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
